sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var gnome:Int=1
	var l:Int=getNombrValeurs()
	while(gnome<l) {
		if (plusPetit(gnome,gnome-1)) {
			echange(gnome,gnome-1)
			gnome-=1
		}
		if (gnome==0) {
			gnome=1
		}
	}
}
